# davidmatousek-tachi

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALL_MANIFEST.md  LICENSE  MIGRATION.md  Makefile  README.md  SECURITY.md  pyproject.toml  release-please-config.json  requirements-dev.txt
.aod/: agent-assignments.md  aod-kit-version  personalization.env.example  research.md  session-prompt-infographic-fix.md  spec.md  tasks.md  template-manifest.txt
.claude/: INFRASTRUCTURE_SETUP_SUMMARY.md  README.md  mcp-config.json  settings.json
.github/: CODEOWNERS
.security/: README.md  scan-log.jsonl  vulnerabilities.jsonl
adapters/: ProjectMeta.yaml  README.md
agents/: StyleGuide.md  VoiceProfile.md  orchestrator.md  threat-infographic.md  threat-report.md
contracts/: stack-pack-defaults-schema.md
docs/: DOCS_TO_UPDATE_AFTER_NEW_FEATURE.md  INSTITUTIONAL_KNOWLEDGE.md  (+1 more)
scripts/: init.sh  (+11 more)
tests/fixtures/init-baseline-tree/stacks/fastapi-react-local/scaffold/backend/: alembic.ini  pyproject.toml
tests/fixtures/init-baseline-tree/stacks/fastapi-react-local/scaffold/backend/alembic/: env.py
tests/fixtures/init-baseline-tree/stacks/fastapi-react-local/scaffold/backend/app/: config.py  main.py
tests/fixtures/init-baseline-tree/stacks/fastapi-react-local/scaffold/backend/app/api/: deps.py
tests/fixtures/init-baseline-tree/stacks/fastapi-react-local/scaffold/backend/app/db/: session.py
tests/fixtures/init-baseline-tree/stacks/fastapi-react-local/scaffold/backend/tests/: conftest.py
(+2343 files in other folders)
